Whitespace at right side of page fixed

--- a/src/Header.css
+++ b/src/Header.css
@@ -1,6 +1,5 @@
 .dk-blue {
   background-color: #4f7fa9;
-  width: 100%;
 }
 
 .row.lt-blue {
@@ -10,15 +9,6 @@
 .huge.header,
 a {
   color: white;
-}
-
-.main.ui.huge.header {
-  width: 100%;
-}
-
-.ui.secondary.menu {
-  margin-top: 5px;
-  margin-right: 70px;
 }
 
 .btn-text,
